--- a/StructuresTests/StructuresTests.csproj
+++ b/StructuresTests/StructuresTests.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="LinkedListTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SkiplistTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Structures\Structures.csproj">
